feat: optimize chunking logic and enhance sentence span handling in ChunkerService